--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ main
     gap: 1em;
     align-items: center;
     font-weight: 500;
+    
 }
 
 #Add-information input
@@ -183,13 +184,62 @@ footer
 }
 
 
-/* adding media query for 380px */
-@media (max-width:380px)
+/* adding media query for 500px */
+/* @media (max-width:500px)
 {
 .information
 {
     display: flex;
-    justify-content: space-between;
+
+    flex-direction: column;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+}
+
+#Add-information
+{
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    width: 100%;
+    flex: none;
+
+}
+main
+{
+    gap: 0;
+}
+} */
+
+@media (max-width: 650px) {
+  main {
+    flex-direction: column;
+    gap: 1em;         /* keep a small gap instead of a huge one */
+    min-height: 88vh; /* remove forced tall height */
+  }
+
+  #Add-information,
+  #Display-information {
+    flex: unset;        /* don’t force them to stretch */
+    width: 100%;        /* take full width of the screen */
+    align-items: center;
+  }
+
+  #Display-information {
+    min-height: 54vh;
+  }
+
+  #Add-information input {
+    min-width: 100%;
+  }
+
+  .information
+{
+    display: flex;
+
     flex-direction: column;
 }
 
